--- a/GuiApp/kv/editUsersScreen.kv
+++ b/GuiApp/kv/editUsersScreen.kv
@@ -5,4 +5,11 @@
     rows: 1
     size_hint: (1, 1)
     padding: '20dp'
+    ClickableTable:
+        id: usersTable
+        headerHeight: self.width / 15
+        entryHeight: self.width / 15
+        columns: ["First name", "Last name", "User ID", "Total credits"]
+        columnExamples: ["LongName", "LongLastName", "23", "100.00"]
+        onEntryPressed: root.onUserEntryPressed
 
