--- a/GuiApp/kv/linkCardConfirmationPopup.kv
+++ b/GuiApp/kv/linkCardConfirmationPopup.kv
@@ -7,38 +7,49 @@
         center_x: True
         cols: 1
         size_hint: (1, 1)
-        padding: '20dp'
-        spacing: '20dp'
+        padding: '25dp'
+        Widget: # Vertical Spacer
+            size_hint_y: 0.1
         Label:
             id: title
             size_hint_y: None
-            height: 40
-            font_size: 24
+            height: (self.width / 14) * 2
+            font_size: self.width / 16
             text_size: self.size
             halign: 'center'
             valign: 'middle'
             bold: True            
             text: 'Add/Update linked card'
+        Widget: # Vertical Spacer
+            size_hint_y: 0.2
         Label:
             id: question
-            font_size: 22
+            size_hint_y: None
+            height: (self.width / 18) * 2
+            font_size: self.width / 20
             text_size: self.size
             halign: 'center'
             valign: 'middle'
             bold: True            
             text: 'UNDEFINED'
+        Widget: # Vertical Spacer
+            size_hint_y: 0.3
         GridLayout:
             rows: 1
             size_hint: (1, None)
             height: self.minimum_height
             MediumGreenButton:
                 text: "Confirm"
+                width: self.parent.width / 4
+                height: self.width / 3
+                text_size: self.height / 2
                 on_press: root.onConfirm()
             Widget: # Horizontal Spacer
-                size_hint: (1, None)
-                height: 75
             MediumOrangeButton:
                 text: "Cancel"
+                width: self.parent.width / 4
+                height: self.width / 3
+                text_size: self.height / 2
                 on_press: root.onCancel()
             
             
