chore(app): 🎨 update button text from "Confirm" to "Continue" in topup amount screen

--- a/GuiApp/kv/topUpAmountScreen.kv
+++ b/GuiApp/kv/topUpAmountScreen.kv
@@ -109,9 +109,9 @@
             size_hint: (1, None)
             height: 100
         LargeGreenButton:
-            text: "Confirm"
+            text: "Continue"
             anchor_x: "left"
-            on_press: root.onConfirm()
+            on_press: root.onContinue()
         Widget: # Horizontal Spacer
             size_hint: (1, None)
             height: 100
